# mailbourne

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml  release.yml
crates/mailbourne/: Cargo.toml  README.md
crates/mailbourne-core/: Cargo.toml
crates/mailbourne-core/src/: address.rs  config.rs  edit.rs  envelope.rs  event.rs  lib.rs  message.rs
crates/mailbourne-doctor/: Cargo.toml
crates/mailbourne-doctor/src/: atom.rs  lib.rs  report.rs  wings.rs
crates/mailbourne-doctor/src/wings/: identity.rs  send.rs
crates/mailbourne-in/: Cargo.toml
crates/mailbourne-in/src/: command.rs  lib.rs  session.rs
crates/mailbourne-inspect/: Cargo.toml
crates/mailbourne-inspect/src/: atom.rs  lib.rs  report.rs
crates/mailbourne-inspect/src/wings/: receive.rs
crates/mailbourne-out/: Cargo.toml
crates/mailbourne-out/src/: conversation.rs  dial.rs  lib.rs  queue.rs  retry.rs  route.rs  sign.rs
crates/mailbourne-out/tests/: a_message_must_leave.rs
crates/mailbourne-policy/: Cargo.toml
crates/mailbourne-policy/src/: lib.rs
crates/mailbourne-probe/: Cargo.toml
crates/mailbourne-probe/src/: blocklist.rs  dial.rs  dns.rs  lib.rs  tls.rs
crates/mailbourne-probe/src/dns/: dkim.rs  mx.rs  ptr.rs  spf.rs
crates/mailbourne-store/: Cargo.toml
crates/mailbourne-store/src/: lib.rs
crates/mailbourne/src/: compose.rs  console.rs  identity.rs  inspect.rs  lib.rs  main.rs  route.rs  serve.rs  sheet.rs
deploy/: docker-compose.yml
