[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.0.2"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mailbourne/mailbourne"
authors = ["The mailbourne contributors"]

# Every public item is documented, always. The codebase is a tutorial;
# undocumented code is a broken promise. Promote warns to deny before 1.0.
[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
missing_errors_doc = "warn"
missing_panics_doc = "warn"
