[package]
name = "mailbourne-core"
description = "The vocabulary of mailbourne: addresses, envelopes, messages, events, config (internal)"
publish = false
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true
