[package]
name = "mailbourne-core"
description = "The vocabulary of mailbourne: addresses, envelopes, messages, events, config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
toml = "0.8"
toml_edit = "0.22"
