[package]
name = "mailbourne-in"
description = "A message must arrive: the server side of SMTP (receiving)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
tokio = { version = "1", features = ["io-util"] }

[dev-dependencies]
tokio = { version = "1", features = ["io-util", "rt-multi-thread", "macros"] }
