[package]
name = "mailbourne-out"
description = "A message must leave: signing, routing, dialing, SMTP conversation, queue, retry"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
mailbourne-core = { path = "../mailbourne-core", version = "0.0.2" }
thiserror = "2"
tokio = { version = "1", features = ["io-util", "net", "time", "rt", "macros"] }
hickory-resolver = "0.24"
# ring (not aws-lc-rs) as the crypto backend: vendored and statically
# compiled — no system libraries ever — and it cross-compiles cleanly to
# static musl targets, which the single-binary promise depends on.
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "tls12", "ring"] }
rustls = { version = "0.23", default-features = false, features = ["logging", "std", "tls12", "ring"] }
webpki-roots = "0.26"
mail-auth = "0.11"
rustls-pki-types = "1"

[dev-dependencies]
tokio = { version = "1", features = ["io-util", "net", "time", "rt-multi-thread", "macros"] }
rcgen = "0.13"
