[package]
name = "mailbourne-out"
description = "A message must leave: signing, routing, dialing, SMTP conversation, queue, retry"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
mailbourne-core = { path = "../mailbourne-core", version = "0.0.4" }
thiserror = "2"
tokio = { version = "1", features = ["io-util", "net", "time", "rt", "macros"] }
hickory-resolver = "0.24"
# ring (not aws-lc-rs) as the crypto backend: vendored and statically
# compiled — no system libraries ever — and it cross-compiles cleanly to
# static musl targets, which the single-binary promise depends on.
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "tls12", "ring"] }
rustls = { version = "0.23", default-features = false, features = ["logging", "std", "tls12", "ring"] }
webpki-roots = "0.26"
mail-auth = { version = "0.11", default-features = false, features = ["ring", "report", "dns-hickory"] }
rustls-pki-types = "1"
# Key *generation* (not signing) rides RustCrypto's rsa — pure Rust, the
# same stack mail-auth's own `generate` feature uses.
rsa = { version = "0.9", features = ["pem"] }
rand = "0.8"
base64 = "0.22"

[dev-dependencies]
tokio = { version = "1", features = ["io-util", "net", "time", "rt-multi-thread", "macros"] }
rcgen = { version = "0.13", default-features = false, features = ["ring", "pem"] }
