[package]
name = "mailbourne-probe"
description = "Questions mailbourne asks the world: DNS, ports, TLS, blocklists"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
thiserror = "2"
hickory-resolver = "0.24"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
