[package]
name = "mailbourne"
description = "A liveable mail server and library — single binary, Rust-native, with a built-in inspector for DNS, DKIM, and deliverability."
keywords = ["mail", "smtp", "email", "server", "self-hosted"]
categories = ["email", "network-programming"]
readme = "README.md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[lints]
workspace = true

[[bin]]
name = "mailbourne"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["dep:clap", "dep:dialoguer", "tokio/rt-multi-thread", "tokio/macros"]

[dependencies]
mailbourne-core = { path = "../mailbourne-core", version = "0.0.4" }
mailbourne-out = { path = "../mailbourne-out", version = "0.0.4" }
mailbourne-in = { path = "../mailbourne-in", version = "0.0.4" }
mailbourne-policy = { path = "../mailbourne-policy", version = "0.0.4" }
mailbourne-store = { path = "../mailbourne-store", version = "0.0.4" }
mailbourne-probe = { path = "../mailbourne-probe", version = "0.0.4" }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"], optional = true }
dialoguer = { version = "0.11", optional = true }
tokio = { version = "1", features = ["rt", "net", "sync"] }
async-trait = "0.1"
